applications/argocd/manifests/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argo-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.internal.zelic.io`) || Host(`argocd.zelic.io`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: (Host(`argocd.internal.zelic.io`) || Host(`argocd.zelic.io`)) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
